// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiling to CSS and JavaScript should return a map of files 1`] = `
Object {
  "style.elo.js": "import { StyleSheet } from \\"react-native\\"

const styles = StyleSheet.create({
  button: {
    backgroundColor: \\"red\\",
    paddingLeft: 10
  },
  box: {
    paddingTop: 10
  },
  label: {
    fontSize: 12
  }
})

export function Button({ alignItems }) {
  const style = {
    alignItems: alignItems
  }

  return StyleSheet.flatten([styles.button, style])
}

export function Box() {
  return styles.box
}

export function Label({ lineHeight }) {
  const style = {
    lineHeight: lineHeight
  }

  return StyleSheet.flatten([styles.label, style])
}",
}
`;

exports[`Compiling to CSS and JavaScript should use a custom importName 1`] = `
Object {
  "style.elo.js": "import { StyleSheet } from \\"@react-pdf/renderer\\"

const styles = StyleSheet.create({
  button: {
    backgroundColor: \\"red\\",
    paddingLeft: 10
  },
  box: {
    paddingTop: 10
  },
  label: {
    fontSize: 12
  }
})

export function Button({ alignItems }) {
  const style = {
    alignItems: alignItems
  }

  return StyleSheet.flatten([styles.button, style])
}

export function Box() {
  return styles.box
}

export function Label({ lineHeight }) {
  const style = {
    lineHeight: lineHeight
  }

  return StyleSheet.flatten([styles.label, style])
}",
}
`;
